sumo/tests/traci/VariableRetrieval/Route/errors/testsuite.traci
# Tests what happens if one asks for an unsupported variable
UnsupportedVariable

# Tests what happens if one asks for an unknown ID
UnknownID
